# Simple-Text-Viewer

./: README.md  dummy-text.txt  io.github.aerphanas.json  meson.build
data/: io.github.aerphanas.appdata.xml.in  io.github.aerphanas.desktop.in  io.github.aerphanas.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  simple-text-viewer-application.c  simple-text-viewer-application.h  simple-text-viewer-window.c  simple-text-viewer-window.h  simple-text-viewer-window.ui  simple-text-viewer.gresource.xml
src/gtk/: help-overlay.ui
